syntax = "proto3";
option csharp_namespace = "grpcStvari";

service KorisniciServ {
	rpc DajKorisnike (TrebaBudePrazno) returns (stream KorisnikMsg);
	rpc PoredjenjaRadi (TrebaBudePrazno) returns (KorisnikMsg);
}


message TrebaBudePrazno {

}

message KorisnikMsg {
	int32 ID = 1;
	string Ime = 2;
	string Prezime = 3;
	repeated AdresaMsg Adrese = 4;
}

message AdresaMsg {
	string ID = 1;
	string Ulica = 2;
	string Broj = 3;
}